--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <script src="classes/keyboard.class.js"></script>
     <script src="js/game.js"></script>
     <script src="classes/movable.object.class.js"></script>
     <script src="classes/character.class.js"></script>
@@ -13,6 +14,8 @@
     <script src="classes/world.class.js"></script>
     <script src="classes/cloud.class.js"></script>
     <script src="classes/background-object.class.js"></script>
+    
+
     <title>El Polio Loco</title>
 </head>
 <body onload="init()">
