--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <script src="classes/movable.object.class.js"></script>
     <script src="classes/character.class.js"></script>
     <script src="classes/chicken.class.js"></script>
+    <script src="classes/endboss.class.js"></script>
     <script src="classes/world.class.js"></script>
     <script src="classes/cloud.class.js"></script>
     <script src="classes/background-object.class.js"></script>
     <script src="classes/level.class.js"></script>
-    <script src="levels/level.js"></script>
+    <script src="levels/level1.js"></script>
+    
     
 
     <title>El Polio Loco</title>
