--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="classes/drawable-object.class.js"></script>
     <script src="classes/status-bar.class.js"></script>
+    <script src="classes/status-bar-bottle.class.js"></script>
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
     <script src="classes/chicken.class.js"></script>
