--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <script src="classes/world.class.js"></script>
     <script src="classes/drawable-object.class.js"></script>
     <script src="classes/status-bar.class.js"></script>
     <script src="classes/status-bar-bottle.class.js"></script>
     <script src="classes/movable-object.class.js"></script>
+    <script src="classes/background-object.class.js"></script>
     <script src="classes/character.class.js"></script>
     <script src="classes/chicken.class.js"></script>
     <script src="classes/cloud.class.js"></script>
     <script src="classes/endboss.class.js"></script>
-    <script src="classes/world.class.js"></script>
-    <script src="classes/background-object.class.js"></script>
     <script src="classes/keyboard.class.js"></script>
     <script src="classes/throwable-object.class.js"></script>
+    <script src="classes/bottle-object.class.js"></script>
     <script src="classes/level.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
-    
-    
+
+
 
     <title>El Polio Loco</title>
 </head>
+
 <body onload="init()">
     <h1>El Polio Loco</h1>
 
@@ -33,4 +36,5 @@
 
     </canvas>
 </body>
+
 </html>
