--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="classes/drawable-object.class.js"></script>
     <script src="classes/status-bar.class.js"></script>
     <script src="classes/status-bar-bottle.class.js"></script>
+    <script src="classes/status-bar-coins.class.js"></script>
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/background-object.class.js"></script>
     <script src="classes/character.class.js"></script>
