--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="classes/chicken.class.js"></script>
     <script src="classes/cloud.class.js"></script>
     <script src="classes/endboss.class.js"></script>
+    <script src="classes/status-bar-endboss.class.js"></script>
     <script src="classes/keyboard.class.js"></script>
     <script src="classes/throwable-object.class.js"></script>
     <script src="classes/bottle-object.class.js"></script>
