--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="classes/level.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
+    <script src="classes/endscreen.class.js"></script>
 
 
 
