--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/icon/sombrero.ico" type="image/x-icon">
+
     <script src="classes/world.class.js"></script>
     <script src="classes/drawable-object.class.js"></script>
     <script src="classes/status-bar.class.js"></script>
@@ -33,11 +35,11 @@
     <title>El Polio Loco</title>
 </head>
 
-<body>
+<body">
     <h1>El Polio Loco</h1>
     <div class="container-start">
         <canvas class="d-none" id="canvas" width="720px" height="480px"></canvas>
-    
+
         <img id="canvasImg" class="img-start" src="img/9.Intro _ Outro Image/Start Screen/Opción 1.png">
         <div class="menu-container">
             <span class="game-explain">Move Left <img src="img/icon/left.ico"> </span>
