start sound added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <title>El Polio Loco</title>
 </head>
 
-<body">
+<body onload="gameload()">
     <h1>El Polio Loco</h1>
     <div class="container-start">
         <canvas class="d-none" id="canvas" width="720px" height="480px"></canvas>
