--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 
 
-    <title>El Polio Loco</title>
+    <title>El Pollo Loco</title>
 </head>
 
 <body onload="gameload()">
-    <h1>El Polio Loco</h1>
+    <h1>El Pollo Loco</h1>
     <div class="container-start">
         <canvas class="d-none" id="canvas" width="720px" height="480px"></canvas>
 
